package com.playground.domain.model.account.value;

public record AccountId(String value) {}
