package com.playground.domain.model.account.value;

public record AccountName(String value) {}
