package com.playground.domain.model.account.value;

public record Password(String value) {}
