package com.playground.domain.model.project.value;

public record ProjectId(String value) {}
