package com.playground.domain.model.project.value;

public record ProjectName(String value) {}
