@startuml
class Account {
  - id: AccountId
  - name: AccountName
  - password: Password
  + equals(o: Object): boolean
  + hashCode(): int
}

class AccountId {
  - value: String
}

class AccountName {
  - value: String
}

class Password {
  - value: String
}

class AccountFactory {
  + createAccount(accountName: AccountName, password: Password): Account
}

class Project {
  - id: ProjectId
  - name: ProjectName
  - users: HashSet<User>
  - tasks: HashSet<Task>
  + createTask(taskFactory: TaskFactory, taskName: TaskName): void
  + createDueDateTask(dueDateTaskFactory: DueDateTaskFactory, taskName: TaskName, dueDate: DueDate, maxPostponeCount: MaxPostponeCount): void
  + equals(o: Object): boolean
  + hashCode(): int
}

class ProjectId {
  - value: String
}

class ProjectName {
  - value: String
}

class ProjectFactory {
  + createProject(projectName: ProjectName): Project
}

class Task {
  - id: TaskId
  - name: TaskName
  - status: Status
  + equals(o: Object): boolean
  + hashCode(): int
}

class TaskId {
  - value: String
}

class TaskName {
  - value: String
}

enum Status {
  UNDONE
  DOING
  DONE
}

class TaskFactory {
  + createTask(taskName: TaskName): Task
}

class DueDateTask {
  - dueDate: DueDate
  - postponeCount: PostponeCount
  - maxPostponeCount: MaxPostponeCount
}

class DueDate {
  - value: LocalDateTime
}

class PostponeCount {
  - value: int
}

class MaxPostponeCount {
  - value: int
}

class DueDateTaskFactory {
  + createDueDateTask(taskName: TaskName, dueDate: DueDate, maxPostponeCount: MaxPostponeCount): DueDateTask
}

class IdGenerator {
  {static} - ULID_INSTANCE: ULID
  {static} + generateId(): String
}

Account *-- AccountId
Account *-- AccountName
Account *-- Password
AccountFactory ..> Account
AccountFactory ..> AccountId
AccountFactory ..> IdGenerator
AccountFactory ..> AccountName
AccountFactory ..> Password
Project *-- ProjectId
Project *-- ProjectName
Project "0.*" --> "1..*" Account
Project "1" *-- "0..*" Task
Project ..> TaskFactory
ProjectFactory ..> Project
ProjectFactory ..> ProjectId
ProjectFactory ..> IdGenerator
ProjectFactory ..> ProjectName
ProjectFactory ..> Task
Task *-- TaskId
Task *-- TaskName
Task *-- Status
TaskFactory ..> Task
TaskFactory ..> TaskId
TaskFactory ..> IdGenerator
TaskFactory ..> TaskName
TaskFactory ..> Status
DueDateTask --|> Task
DueDateTask *-- DueDate
DueDateTask *-- PostponeCount
DueDateTask *-- MaxPostponeCount
DueDateTaskFactory ..> DueDateTask
DueDateTaskFactory ..> TaskId
DueDateTaskFactory ..> IdGenerator
DueDateTaskFactory ..> TaskName
DueDateTaskFactory ..> Status
DueDateTaskFactory ..> DueDate
DueDateTaskFactory ..> PostponeCount
DueDateTaskFactory ..> MaxPostponeCount
@enduml
